# Avendia-

./: .gitignore  docker-compose.prod.yml  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/src/: init_db_prod.py  main.py  smoke_test.py
backend/src/admin/: router.py
backend/src/auth/: dependencies.py  router.py  security.py  users.py
backend/src/chatbot/: router.py  search.py  service.py
backend/src/config/: database.py  settings.py
backend/src/documents/: router.py  schemas.py  service.py
backend/src/models/: __init__.py  ai_log.py  document.py  ficha_aprendizaje.py  payment_transaction.py  plan_anual.py  sesion.py  unidad.py  user.py  vector_knowledge.py
backend/src/rag/: router.py  service.py
frontend/: Dockerfile  package-lock.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: layout.tsx  page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/onboarding/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/components/: Button.tsx
frontend/src/components/auth/: WelcomeModal.tsx
frontend/src/components/chat/: EduAsesorChat.tsx
frontend/src/components/dashboard/: ToolCard.tsx  ToolFilters.tsx  toolTypes.ts
frontend/src/components/layout/: Sidebar.tsx
frontend/src/components/onboarding/: GenerationLoading.tsx  OnboardingWizard.tsx  (+3 more)
frontend/src/config/: api.ts
frontend/src/context/: UserContext.tsx
frontend/src/modules/: DocenteModule.tsx
frontend/src/services/: adminService.ts  chatService.ts  documentService.ts
(+17 files in other folders)
