[project]
name = "avendia-backend"
version = "0.1.0"
description = "Backend para la plataforma SaaS educativa AVENDIA"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.28.0",
    "sqlmodel>=0.0.16",
    "pgvector>=0.2.5",
    "pydantic-settings>=2.2.0",
    "asyncpg>=0.29.0",
    "bcrypt>=4.1.0",
    "pyjwt>=2.8.0",
    "openai>=1.12.0",
    "pypdf>=4.0.0",
    "google-generativeai>=0.8.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.32",
    "python-docx>=1.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "black>=24.0.0",
]
